fix: adjust layout styles for improved responsiveness and alignment

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -22,20 +22,21 @@ body {
   flex-direction: column;
   gap: var(--s-spacing-medium);
   color: var(--s-color-content-default);
+    height: 100dvh;
 
   .first-section {
     display: flex;
     flex-direction: column;
     gap: var(--s-spacing-medium);
-    height: 100dvh;
-
+    height: 100%;
+    
     .image-container {
       display: flex;
       justify-content: space-between;
       align-items: center;
       gap: var(--s-spacing-medium);
       width: 100%;
-      height: 60%;
+      height: 80%;
 
       .computer {
         height: 100%;
